--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -114,6 +114,8 @@
   "error_not_match": "Passwords do not match.",
   "cancel": "Cancel",
   "confirm": "Confirm",
+  "nodata": "There are currently no products",
+  "createNew": "Create new request",
   "carousel": {
     "view_more": "View more",
     "slide1_title": "Welcome to Mangovate",
@@ -132,7 +134,7 @@
     "title": "Material Purchase List",
     "note": "Manage and follow raw material need to be provided",
     "view_more": "View more",
-    "empty": "There are currently no requests to supply.",
+    "empty": "There are currently no requests.",
     "quantity": "Quantity",
     "price_per_unit": "Price per unit",
     "total_price": "Total price",
