--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -386,6 +386,7 @@
     "delivery_time": "Delivery time:",
     "system_note": "System note:",
     "your_note": "Your note:",
+    "enter_note": "Enter your note",
     "send_request": "Send Request",
     "no_data": "None",
     "no_requests": "No provide requests available.",
