--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -382,6 +382,7 @@
     "delivery_time": "Thời gian nhận hàng:",
     "system_note": "Ghi chú hệ thống:",
     "your_note": "Ghi chú của bạn:",
+    "enter_note": "Nhập ghi chú của bạn",
     "send_request": "Gửi Yêu Cầu",
     "no_data": "Không có",
     "no_requests": "Không có đơn yêu cầu cung cấp nào.",
