update-validate-material

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1994,7 +1994,10 @@
     "heightPlaceholder": "Only for carton box",
     "selectImageButton": "Choose image",
     "vacuumBagLabel": "Vacuum Bag",
-    "cartonBoxLabel": "Carton Box"
+    "cartonBoxLabel": "Carton Box",
+    "nameOnlySpaces": "Name cannot contain only whitespace",
+    "noLeadingTrailingSpaces": "Name cannot have leading or trailing spaces"
+
   },
   "createProductionProcess": {
     "title": "Create Production Process",
