--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1778,6 +1778,10 @@
     "not_logged_in": "You are not logged in. Please log in again.",
     "fetch_fail": "Failed to fetch Material types!",
     "server_error": "Cannot connect to the server!",
+    "confirm_delete_title" : "Dou you want to delete material ?",
+    "confirm_delete_content" :  "Deleting this material is permanent and cannot be undone. \nPlease confirm if you really want to proceed.",
+    "confirm_Undodelete_title": "Do you want to restore this material?",
+    "confirm_Undodelete_content": "This will undo the deletion and make the material available again.\nPlease confirm if you want to proceed.",
     "columns": {
       "type_name": "Material type Name",
       "description": "Description",
