--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -1755,6 +1755,7 @@
     "create_fail": "Cập nhật thất bại!",
     "update_error": "Lỗi kết nối đến server!",
     "delete_success": "Đã chuyển Nguyên liệu vào trạng thái Đã xóa!",
+    "Undo_delete_success": "Khôi phục nguyên liệu thành công",
     "delete_fail": "Hủy thất bại!",
     "not_logged_in": "Bạn chưa đăng nhập! Vui lòng đăng nhập lại.",
     "fetch_fail": "Lỗi khi lấy danh sách loại Nguyên liệu!",
